# monocurl

./: .gitignore  BUILDING.md  Cargo.toml  README.md
.github/workflows/: release.yml
assets/AppIcon.appiconset/: Contents.json
assets/default_scenes/: (Example) Flow Field.mcs  (Example) Text.mcs
assets/img/window/: LICENSE.adwaita-icons.txt
assets/std/std/: anim.mcl  color.mcl  mesh.mcl
bundling/: Makefile  bundle-macos.sh  package.sh  post-bundle-macos.sh
bundling/linux/: com.enigmadux.monocurl.desktop  install.sh  post-bundle.sh
bundling/macos/: bundle_dylibs.py  make_icns.pl  post-bundle.sh
bundling/scripts/: make_windows_icon.py
bundling/templates/macos/: Info.plist.in
bundling/templates/windows/: Monocurl.iss.in
bundling/windows/: Monocurl.iss.in  post-bundle.ps1  post-bundle.sh
crates/latex/: Cargo.toml
crates/latex/src/: tectonic.rs
crates/monocurl/: Cargo.toml
crates/monocurl/src/: home_view.rs  main.rs  window.rs
crates/monocurl/src/document_view/: render.rs
crates/monocurl/src/editor/: editor_view.rs
crates/monocurl/src/editor/text_editor/: cursor.rs  editing.rs  mod.rs  render.rs
crates/monocurl/src/editor/text_editor/popover_element/: autocomplete.rs
crates/monocurl/src/services/: compilation.rs  execution.rs  mod.rs
crates/monocurl/src/services/execution/: loop_state.rs  snapshot.rs
crates/monocurl/src/state/: textual_state.rs
crates/monocurl/src/state/textual_state/: cursor.rs  slide.rs
crates/monocurl/src/timeline/: timeline_view.rs  track.rs
crates/monocurl/src/viewport/viewport_view/: camera.rs  render.rs
(+20 files in other folders)
